feat: modify window switch keybind

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,9 +10,9 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# SHIFT + ALT vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
+# ALT vim keys to switch windows (offset by one row)
+bind -n M-z previous-window
+bind -n M-o next-window
 
 unbind C-f
 # Pass through CTRL+f if the current pane command is `neovim`, so CTRL-f only works in `Normal` mode
