FIX: Require Prefix for copy-mode keybind

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,7 +62,7 @@ set -g status-position top
 
 # Vim-like yank keybinds
 unbind C-v
-bind -n C-v copy-mode
+bind -r C-v copy-mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
