feat: change pane switching keybinds

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 # Use 24-bit colors
-# Actually also set by 'tmux-sensible'
 set -g default-terminal 'screen-256color'
 set -ag terminal-overrides ',xterm-256color:RGB'
 
@@ -44,16 +43,22 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Switch panes with Vim-like keybinds
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
 # Resize panes
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
+bind -r C-h resize-pane -L 5
 # Maximize pane
 bind -r m resize-pane -Z
 
 
-# Keep session alive, if even if closing the last window
+# Keep session alive, even if closing the last window
 # Will not detach from tmux, remain in the session
 set -g detach-on-destroy off
 
@@ -71,7 +76,6 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
