feat: remove unneccessary status bar items

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,11 +73,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -101,9 +99,10 @@ set -g @catppuccin_icon_window_bell "󰂞"
 
 set -g @catppuccin_date_time "%d-%m-%Y %H:%M"
 
-# Options: application, directory, session, user, host, date_time, battery (set -g @plugin 'tmux-plugins/tmux-battery'), cpu (set -g @plugin 'tmux-plugins/tmux-cpu')
-set -g @catppuccin_status_modules_right "battery date_time"
-set -g @catppuccin_status_modules_left ""
+# Options: application, directory, session, user, host, date_time,
+# battery (set -g @plugin 'tmux-plugins/tmux-battery'), cpu (set -g @plugin 'tmux-plugins/tmux-cpu')
+set -g @catppuccin_status_modules_right " "
+set -g @catppuccin_status_modules_left " "
 
 # Set the save interval in minutes, default is 15
 set -g @continuum-save-interval '5'
